added bell on recognition

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <audio id="bell" src="achievement-bell.wav"></audio>
     <div id="app">
       <div id="controls"></div>
       <div id="resultView"></div>
@@ -14,7 +15,7 @@
         Video stream not available.
       </video>
       <canvas id="videoPreview" width='360' height='360'></canvas>
-      <canvas id="videoAnalyze"></canvas>
+      <canvas id="videoAnalyze" width='360' height='360'></canvas>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
